--- a/frontend/drnk-jamz/package.json
+++ b/frontend/drnk-jamz/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash.template": ">=4.5.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.0.0",
     "react": "^16.8.6",
